--- a/client/bootstrap.html
+++ b/client/bootstrap.html
@@ -1,5 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
   <title>Colloquy</title>
 </head>
 
