User account integration. Added favicon. Tweaked collection schemas. Improved polymer color scheme.

--- a/client/bootstrap.html
+++ b/client/bootstrap.html
@@ -1,5 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/medbook.png">
   <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
   <title>Colloquy</title>
 </head>
